Fixed alignment for itinerary

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -38,8 +38,7 @@ h2 {
 p{
     background-color:bisque;
     color:#c19376;
-    text-align: left;
-    margin-left: 243px;
+    text-align: center;
     font-size: 20px;
     border-radius: 25px;
     padding: 12px;
